--- a/src/publications.pug
+++ b/src/publications.pug
@@ -15,8 +15,8 @@ html(lang="en")
                 +publications-intro
                 include components/teachers
                 +publications-teachers 
-                include components/category
-                +category
+                include components/accept
+                +accept
                 include components/people
                 +people
                 include components/tutorial
