--- a/src/components/people.pug
+++ b/src/components/people.pug
@@ -81,3 +81,33 @@ mixin compets-people()
                             img(src="@img/people-img-6.svg", alt="" draggable="false")
                         p.people__subtitle ВСЕГДА ОТЗЫВЧИВАЯ ПОДДЕРЖКА
                     p.people__desc Поддержка клиентов работает без перерывов и выходных. В любую минуту мы помогаем Вам.
+
+mixin publications-people()
+    .people.people__publications
+        .people__body.container     
+            h2.people__title Тысячи #[span педагогов] уже опубликовали свои #[span материалы] на нашем портале
+            .people__wrapper 
+                .people__item 
+                    .people__top 
+                        .people__img 
+                            img(src="@img/people-img-1.svg", alt="" draggable="false")
+                        p.people__subtitle помощь при аттестации
+                    p.people__desc Участие в олимпиаде бесплатное. Вы оплачиваете изготовление диплома, только когда довольны результатом.
+                .people__item 
+                    .people__top 
+                        .people__img 
+                            img(src="@img/people-img-2.svg", alt="" draggable="false")
+                        p.people__subtitle Публикация в короткие сроки
+                    p.people__desc Олимпиады проводятся в строгом соответствии с ФЗ «Об образовании» и ФГОС. Сайт имеет лицензию СМИ.
+                .people__item 
+                    .people__top 
+                        .people__img 
+                            img(src="@img/people-img-4.svg", alt="" draggable="false")
+                        p.people__subtitle Удобная форма отправки материала
+                    p.people__desc Вы можете выбрать любой способ оплаты: банковской картой, с баланса сотового телефона, или по квитанции.
+                .people__item 
+                    .people__top 
+                        .people__img 
+                            img(src="@img/people-img-7.svg", alt="" draggable="false")
+                        p.people__subtitle Гарантируем высокое качество
+                    p.people__desc Поддержка клиентов работает без перерывов и выходных. В любую минуту мы помогаем Вам.
