--- a/src/publications.pug
+++ b/src/publications.pug
@@ -18,7 +18,7 @@ html(lang="en")
                 include components/accept
                 +accept
                 include components/people
-                +people
+                +publications-people
                 include components/tutorial
                 +tutorial
                 include components/training
