--- a/src/scss/layout/_people.scss
+++ b/src/scss/layout/_people.scss
@@ -14,11 +14,71 @@
             }
         }
     }
+    &__publications{
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            background: url(../img/teachers-bg.png) center / cover no-repeat;
+            right: 0;
+            @include res('bottom', -97px);
+            @include res('width', 1490px);
+            @include res('height', 240px);
+            @include media(575){
+                width: 100%;
+                @include resa('height', 100px);
+            }
+        }
+        .people{
+            &__title{
+                text-transform: uppercase;
+                &::before{
+                    @include res('width', 1920px);
+                    border-radius: 0;
+                    @include res('height', 355px);
+                    bottom: 0;
+                    top: auto;
+                    z-index: -1;
+                    @include media(575){
+                        @include resa('width', 360px);
+                        @include resa('height', 120px);
+                    }
+                }
+            }
+            &__wrapper{
+                @include res('max-width', 780px);
+                width: 100%;
+                position: relative;
+                @include media(575){
+                    max-width: 100%;
+                }
+                &::before{
+                    content: '';
+                    position: absolute;
+                    @include res('width', 328px);
+                    @include res('height', 512px);
+                    background: url(../img/people-girl.png) center / cover no-repeat;
+                    transform: translateX(100%);
+                    @include res('right', -50px);
+                    line-height: 0;
+                    @include res('top', -159px);
+                    @include media(575){
+                        display: none;
+                    }
+                }
+            }
+            &__item{
+                width: calc(50% - 0.521vw);
+                @include media(575){
+                    width: 100%;
+                }
+            }
+        }
+    }
     &__title{
         position: relative;
         @include res('padding-top', 58px);
         @include res('padding-bottom', 100px);
-        isolation: isolate;
         color: #FFF;
         @include res('font-size', 34px);
         @include res('line-height', 54px);
