--- a/src/publications.pug
+++ b/src/publications.pug
@@ -24,11 +24,9 @@ html(lang="en")
                 include components/training
                 +olympiads-training
                 include components/diplomas
-                +diplomas
-                include components/samples 
-                +olympiads-samples 
-                include components/calc 
-                +olympiads-calc 
+                +publications-diplomas
+                include components/templates
+                +templates 
                 include components/reviews 
                 +reviews 
                 include components/faq 
