--- a/src/scss/layout/_diplomas.scss
+++ b/src/scss/layout/_diplomas.scss
@@ -4,6 +4,254 @@
     @include media(575){
         @include resa('padding-bottom', 130px);
     }
+    &__publications{
+        @include media(575){
+            @include resa('padding-bottom', 50px);
+        }
+        .publications{
+            &__row{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                background: #222222;
+                @include res('margin-top', 40px);
+                @include res('padding-right', 150px);
+                @include res('border-radius', 30px);
+                overflow: hidden;
+                @include media(575){
+                    flex-direction: column-reverse;
+                    align-items: flex-start;
+                    padding-right: 0;
+                    @include resa('padding-top', 20px);
+                }
+            }
+            &__img{
+                @include res('width', 380px);
+                @include res('min-width', 380px);
+                @include res('height', 280px);
+                overflow: hidden;
+                @include res('margin-right', 40px);
+                @include media(575){
+                    margin-right: 0;
+                    @include resa('margin-top', 20px);
+                    min-width: 100%;
+                    width: 100%;
+                    height: auto;
+                    line-height: 0;
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                    line-height: 0;
+                    object-fit: cover;
+                }
+            }
+            &__right{
+                @include media(575){
+                    @include resa('padding-left', 20px);
+                    @include resa('padding-right', 20px);
+                }
+            }
+            &__title{
+                color: #FFF;
+                @include res('font-size', 34px);
+                @include res('line-height', 50px);
+                font-style: normal;
+                font-weight: 800;
+                text-transform: uppercase;
+                @include res('margin-bottom', 22px);
+                @include media(575){
+                    @include resa('font-size', 16px);
+                    @include resa('line-height', 22px);
+                }
+                span{
+                    color: #325CFE;
+                }
+            }
+            &__desc{
+                color: #FFF;
+                @include res('font-size', 18px);
+                @include res('line-height', 26px);
+                font-style: normal;
+                font-weight: 500;
+                @include res('margin-bottom', 5px);
+                @include media(575){
+                    @include resa('font-size', 14px);
+                    line-height: 140%;
+                    @include resa('margin-bottom', 5px);
+                }
+            }
+            &__date{
+                color: #FFF;
+                @include res('font-size', 34px);
+                line-height: 140%;
+                font-style: normal;
+                font-weight: 300;
+                @include media(575){
+                    @include resa('font-size', 20px);
+                }
+                span{
+                    font-weight: 700;
+                }
+            }
+        }
+        .diplomas{
+            &__title{
+                margin-left: 0;
+                margin-right: auto;
+                &::before{
+                    @include res('width', 1920px);
+                    @include res('left', -370px);
+                    @include media(575){
+                        @include resa('width', 360px);
+                        @include resa('left', -15px);
+                    }
+                }
+            }
+            &__content{
+                display: flex;
+                justify-content: space-between;
+                align-items: stretch;
+                @include res('margin-top', -50px);
+                @include res('margin-bottom', 40px);
+                @include media(575){
+                    @include resa('margin-top', -30px);
+                    flex-direction: column;
+                    @include resa('margin-bottom', 20px);
+                }
+            }
+            &__item{
+                width: calc(50% - 0.521vw);
+                @include res('border-radius', 30px);
+                background: #FFF;
+                box-shadow: 0px 0px 0.521vw 0px rgba(2, 2, 2, 0.10);
+                @include res('padding-top', 43px);
+                @include res('padding-right', 25px);
+                @include res('padding-bottom', 43px);
+                @include res('padding-left', 64px);
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                @include media(575){
+                    width: 100%;
+                    @include resa('padding', 20px);
+                    @include resa('border-radius', 15px);
+                }
+                &:not(:last-of-type){
+                    @include media(575){
+                        @include resa('margin-bottom', 15px);
+                    }
+                }
+            }
+            &__top{
+                display: flex;
+                align-items: center;
+                @include res('margin-bottom', 18px);
+                @include media(575){
+                    @include resa('margin-bottom', 15px);
+                }
+            }
+            &__image{
+                @include res('width', 80px);
+                @include res('min-width', 80px);
+                @include res('height', 80px);
+                @include res('border-radius', 20px);
+                overflow: hidden;
+                @include res('margin-right', 20px);
+                @include media(575){
+                    @include resa('width', 30px);
+                    @include resa('min-width', 30px);
+                    @include resa('height', 30px);
+                    @include resa('border-radius', 6px);
+                    @include resa('margin-right', 10px);
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            &__subtitle{
+                color: #000;
+                @include res('font-size', 26px);
+                @include res('line-height', 36px);
+                font-style: normal;
+                font-weight: 700;
+                text-transform: uppercase;
+                @include media(575){
+                    @include resa('font-size', 14px);
+                    @include resa('line-height', 22px);
+                    @include resa('max-width', 220px);
+                }
+            }
+            &__list{
+                @include res('margin-bottom', 76px);
+                @include media(575){
+                    @include resa('margin-bottom', 40px);
+                }
+            }
+            &__li{
+                color: #000;
+                @include res('font-size', 14px);
+                @include res('line-height', 26px);
+                font-style: normal;
+                font-weight: 500;
+                @include media(575){
+                    @include resa('font-size', 12px);
+                    @include resa('line-height', 24px);
+                }
+                &:not(:last-of-type){
+                    @include res('margin-bottom', 4px);
+                }
+            }
+            &__info{
+                color: rgba(50, 92, 254, 0.40);
+                @include res('font-size', 26px);
+                @include res('line-height', 36px);
+                font-style: normal;
+                font-weight: 700;
+                text-transform: uppercase;
+                @include res('margin-bottom', 6px);
+                @include media(575){
+                    @include resa('font-size', 16px);
+                    @include resa('line-height', 26px);
+                }
+            }
+            &__p{
+                color: #000;
+                @include res('font-size', 18px);
+                @include res('line-height', 26px);
+                font-style: normal;
+                font-weight: 500;
+                @include res('margin-bottom', 26px);
+                @include media(575){
+                    @include resa('font-size', 12px);
+                    @include resa('line-height', 22px);
+                    @include resa('margin-bottom', 10px);
+                }
+            }
+            &__btn{
+                text-align: center;
+                color: #FFF;
+                @include res('font-size', 20px);
+                font-style: normal;
+                font-weight: 700;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @include res('width', 330px);
+                @include res('height', 60px);   
+                border-radius: 10px;
+                @include res('border-radius', 10px);
+                background: #325CFE;
+                @include media(575){
+                    width: 100%;
+                    @include resa('height', 35px);
+                    @include resa('font-size', 14px);
+                    @include resa('border-radius', 8px);
+                }
+            }
+        }
+    }
     &__title{
         color: #FFF;
         @include res('font-size', 40px);
