--- a/src/publications.pug
+++ b/src/publications.pug
@@ -25,6 +25,8 @@ html(lang="en")
                 +olympiads-training
                 include components/diplomas
                 +publications-diplomas
+                include components/patterns
+                +patterns 
                 include components/templates
                 +templates 
                 include components/reviews 
