--- a/src/components/teachers.pug
+++ b/src/components/teachers.pug
@@ -400,3 +400,28 @@ mixin publications-teachers()
                                 .publications__wrapper  
                                     p.publications__txt Опубликовать статью
                                     p.publications__info Всего 150 р./А4
+
+mixin media-teachers()
+    .teachers.teachers__olympiads.teachers__media 
+        .teachers__body.container 
+            .teachers__wrapper 
+                .teachers__row 
+                    .teachers__item 
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-1.png", alt="" draggable="false")
+                            p.teachers__subtitle ОфициальнЫЕ ДОКУМЕНТЫ
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-2.png", alt="" draggable="false")
+                            p.teachers__subtitle УДОБНО, ПРОСТО, быстро
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-4.svg", alt="" draggable="false")
+                            p.teachers__subtitle Диплом через 2 часа
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-3.png", alt="" draggable="false")
+                            p.teachers__subtitle Бесплатное участие
+                    .teachers__image 
+                        img(src="@img/media-girl.png", alt="" draggable="false")
