--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -258,7 +258,7 @@ mixin publications-intro()
                     p.intro__p.small Опубликуем ваш материал на сайте или в печатном издании, чтобы попасть в очередной сборник Вам необходимо подать заявку сегодня.
                     .intro__row 
                         .intro__col
-                            a(href="#!").intro__btn Выбрать способ публикации
+                            a(href="media.html").intro__btn Выбрать способ публикации
                             p.intro__btn-p Опубликуйте свои материалы и получите свидетельство установленного образца
                         .intro__col
                             a(href="#!").intro__cabinet 
